static/css/homepage.css
/* Friends List Button */
#friendsList {
  float: left;
  background-color: #96BCFF;
  border: 0.75rem solid #96BCFF;
  border-radius: 1rem;

  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;

  z-index: 1;
}

#friendsList:hover {
  color: #FFE5B8;
}

/* Side Nav Popout */
.sidenav {
  position: fixed;
  padding-top: 60px;
  height: 100%;
  width: 0;
  top: 0;
  left: 0;

  background-color: #FFFFFF;

  overflow-x: hidden;
  transition: 0.5s;
  z-index: 2;
}

.sidenav a, .sidenav p {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #FFD996;
  display: block;
  transition: 0.3s
}

.sidenav a:hover, .offcanvas a:focus, .sidenav p:hover, .offcanvas p:focus{
  color: #96BCFF;
}

.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

#addFriend {
  margin-top: 5%;
	margin-left: 5%;
	margin-right: 5%;
	width: 90%;

	vertical-align: 100%;
}

.calendar {
  margin-bottom: 1rem;
  width: 100%;
  z-index: -1;
}

/* Month header */
.month {
    padding: 70px 25px;
    max-height: 200px;
    width: 100%;
    background: #FFD996;
}

/* Month list */
.month ul {
    margin: 0;
    padding: 0;
}

.month ul li {
    color: white;
    font-size: 20px;
    text-transform: uppercase;
    letter-spacing: 3px;
}

/* Previous button inside month header */
.month .prev {
    float: left;
    padding-top: 10px;
}

/* Next button */
.month .next {
    float: right;
    padding-top: 10px;
}

/* Weekdays (Mon-Sun) */
.weekdays {
    margin: 0;
    padding: 10px 0;
    background-color:#96BCFF;
}

.weekdays li {
    display: inline-block;
    width: 13.6%;
    color: #FFFFFF;
    text-align: center;
}

/* Days (1-31) */
.days {
    padding: 15px 0;
    background: #FFFFFF;
    margin: 0;
}

.days li {
    padding: 10px;
    list-style-type: none;
    display: inline-block;
    width: 13.6%;
    text-align: center;
    margin-bottom: 5px;
    font-size:12px;
    color:#96BCFF;
}

/* Highlight the "current" day */
.days li .active {
    padding: 0px 5px 0px 5px;
    background: #FFD996;
    color: white !important
}

.myMeetupsButton, .createMeetupButton {
  margin-top: 2rem;
}

#myMeetups #createMeetup {
  margin-bottom: 2rem;
	padding: 2rem;
	width: 100%;
	border: none;
	border-radius: 1rem;

	cursor: pointer;

	text-align: center;
	font-size: 2rem;
}

#myMeetups span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

#myMeetups span:after {
  content: '»';
  position: absolute;
  opacity: 0;
  top: 0;
  right: -20px;
  transition: 0.5s;
}

#myMeetups:hover span {
  padding-right: 25px;
}

#myMeetups:hover span:after {
  opacity: 1;
  right: 0;
}

#createMeetup span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

#createMeetup span:after {
  content: '+';
  position: absolute;
  opacity: 0;
  top: 0;
  left: -20px;
  transition: 0.5s;
}

#createMeetup:hover span {
  padding-left: 25px;
}

#createMeetup:hover span:after {
  opacity: 1;
  left: 0;
}

